tests/sksl/errors/golden/IntFloatMismatch.glsl
### Compilation failed:

error: 12: type mismatch: '=' cannot operate on 'int', 'float'
error: 13: type mismatch: '=' cannot operate on 'int', 'float'
error: 14: type mismatch: '=' cannot operate on 'float', 'int'
error: 15: type mismatch: '+' cannot operate on 'int', 'float'
error: 16: type mismatch: '-' cannot operate on 'int', 'float'
error: 17: type mismatch: '*' cannot operate on 'int', 'float'
error: 18: type mismatch: '/' cannot operate on 'int', 'float'
error: 19: type mismatch: '+' cannot operate on 'int', 'float'
error: 20: type mismatch: '-' cannot operate on 'int', 'float'
error: 21: type mismatch: '*' cannot operate on 'int', 'float'
error: 22: type mismatch: '/' cannot operate on 'int', 'float'
error: 23: type mismatch: '+' cannot operate on 'float', 'int'
error: 24: type mismatch: '-' cannot operate on 'float', 'int'
error: 25: type mismatch: '*' cannot operate on 'float', 'int'
error: 26: type mismatch: '/' cannot operate on 'float', 'int'
15 errors
